--- a/java/权限校验.md
+++ b/java/权限校验.md
@@ -79,7 +79,7 @@ public class Base64Test {
 
 # Symmetric Encryption
 
-## 1. 简介
+## 简介
 
 - 加密和解密，使用相同密钥
 - 强大且高效，适用于处理大量数据
@@ -91,12 +91,12 @@ public class Base64Test {
 - 高级加密标准：AES
 ```
 
-## 2. AES
+## AES
 
 - 支持不同的密钥长度，分别为128位，192位，256位
 - 位数越高，加密越复杂，但性能越低
 
-## 3. bcprov-jdk18on
+## bcprov-jdk18on
 
 ### [bouncycastle官网](https://www.bouncycastle.org/)
 
@@ -248,7 +248,7 @@ public class DecryptTest {
 
 # Asymmetric Encryption
 
-## 1. 简介
+## 简介
 
 ```bash
 # publickey
@@ -262,16 +262,16 @@ public class DecryptTest {
 - 加解密速度，远远慢于对称加密，因此一般只对少量数据加密
 ```
 
-## 2. 工作原理
+## 工作原理
 
 - 服务B的公钥公开，私钥自己保存
 - 任何拿到公钥的第三方，要和服务B进行通讯。都可以对数据进行加密，但是解密的权利，只有B有
 
 ![image-20241120234105764](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20241120234105764.png)
 
-## 3. RSA算法
+## RSA算法
 
-### 3.1 位数
+### 位数
 
 ```bash
 # 512位
@@ -287,7 +287,7 @@ public class DecryptTest {
 - 提供了更高的安全性，但计算和存储成本较高
 ```
 
-### 3.2 bouncycastle三方包
+### bouncycastle三方包
 
 #### create
 
