--- a/devOps/云原生.md
+++ b/devOps/云原生.md
@@ -31,7 +31,7 @@
 - Virtual Private Cloud，专有网络，私有网络，针对云服务器的私有IP而言
 - 一般会默认给一个VPC，可以自定义VPC，应用在ECS上
 
-## IP地址
+## IP
 
 [网络计算器](https://www.sojson.com/convert/subnetmask.html)
 
@@ -40,7 +40,7 @@
 ```bash
 # IP地址是二进制的，每段长度为8，表示数据范围0～255
 00000000     00000000         00000000        00000000 
-# 但是平常书写的时候，一般用二进制转换过来的十进制
+# 平常书写时，一般用对应的十进制
 192.168.0.0/16
 
 # 十进制转换为二进制
@@ -71,7 +71,7 @@
 
 ### 交换机/Subnet
 
-- 选择16位掩码，会有65534个可用网络，如果掩码更小，可用网路更多
+- 选择16位掩码，会有65534个可用网络，如果掩码更小，可用网络更多
 - 因为太多了，所以可以在一个VPC下面创建交换机，就是子网
 
 ![image-20250115111507937](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20250115111507937.png)
