--- a/devOps/云原生.md
+++ b/devOps/云原生.md
@@ -3,7 +3,7 @@
 ## 1. 按量收费
 
 - 停机不收费：数据盘不会丢失，之前安装的软件什么的也都在
-- 公网可能发生变化
+- 公网可能发生变化，私网IP不会变化
 
 ![image-20250114221433895](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20250114221433895.png)
 
@@ -96,3 +96,20 @@
 ### 2. 测试
 
 ![image-20250115211831805](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20250115211831805.png)
+
+# 小操作
+
+## 1. 更换主机名
+
+```bash
+# 云服务器的主机名默认不会重复，但是查看起来不方便
+# 查看主机名
+hostname
+
+# 修改主机名, 修改后需要重新连接terminal
+hostnamectl set-hostname k8s-master
+```
+
+![image-20250127102052157](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20250127102052157.png)
+
+![image-20250127102317859](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20250127102317859.png)
