--- a/分布式.md
+++ b/分布式.md
@@ -1,192 +1,179 @@
 # 分布式锁
 
-## 1. 理念
+## 概念
 
-### 1.1 Java锁
+### Java锁
 
-- 集群模式下，synchronized只能保证单个JVM内部的线程互斥，不能保证跨JVM的互斥
+- 分布式系统中，synchronized只保证单个JVM内部的线程互斥，跨JVM不互斥
 
 ![image-20230329155717221](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20230329155717221.png)
 
-### 1.2 分布式锁
+### 分布式锁
 
-- 提高锁的作用域
+- 为解决分布式系统中，对同一个资源的读写问题
 
 ```bash
-# 分布式锁特点
-1. 多进程可见：     必须多个jvm都可访问到该锁资源
-2. 互斥：          锁资源必须是互斥
-3. 高可用：        锁的稳定性
-4. 高性能：        加锁本来就会降低系统性能，如何保证
-5. 安全性：        锁假如无法释放怎么办
+# 多进程可见：                必须多个jvm都可访问到该锁资源
+# 互斥：                     锁资源必须是互斥
+# 高可用：                   锁的稳定性
+# 高性能：                   加锁本来就会降低系统性能，如何保证
+# 安全性：                   锁假如无法释放怎么办
 ```
 
 ![image-20230329160134829](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20230329160134829.png)
 
-## 2. Redis分布式锁
-
-### 2.1 基础版本
-
-- Redis的工作线程是单线程访问，保证一定只有一个线程来获取锁
+## Redis分布式锁
 
 ```bash
-# 场景一： 假如锁释放失败怎么办？
-1. 获取:     SETNX k v
-2. 执行业务
-3. 释放锁    DEL k
+# 多进程可见                 redis是一个独立的server
+# 互斥：                    redis的工作线程是单线程访问，保证一定只有一个线程来获取锁
+# 高可用：                   redis可以通过集群部署，增强可用性
+# 高性能：                   redis作为内存级别的db，性能高
+# 安全性：                   redis锁超时可以自动释放
+```
 
-# 场景二：
-1. 获取锁，并添加过期时间    SET K V EX 10 NX
+### 锁推演
+
+#### 简易版
+
+```bash
+1. 获取锁，并添加过期时间(保证锁一定释放)    SET K V EX 10 NX
 2. 执行业务
 3. 释放锁
 ```
 
 ```java
-/***
- * 基础版本的Redis分布式锁
- */
-public class RedisBasicLock {
-    private static final String LOCK_NAME = "nike:order:2022-09-01";
-    private static final String LOCK_VALUE = "1";
-    private static long keyTTLSeconds = 5;
+package com.citi.replay;
 
-    /**
-     * 方式一：假如锁释放失败，则该锁永远无法释放
-     */
-    public static void firstLock() {
-        Jedis jedis = getJedis();
-        long result = jedis.setnx(LOCK_NAME, LOCK_VALUE);
-        if (1 == result) {
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.stereotype.Service;
+
+import java.util.concurrent.TimeUnit;
+
+@Slf4j
+@Service
+public class LockService {
+
+    private final String LOCK_KEY = "citi:order:2025-02-13";
+    private final String LOCK_VALUE = "1";
+    private final long TTL_TIMEOUT = 60;
+    private final TimeUnit TTL_UNIT = TimeUnit.SECONDS;
+
+    @Autowired
+    private RedisTemplate<String, String> redisTemplate;
+
+    public void executeWithThread() {
+        new Thread(this::execute).start();
+        new Thread(this::execute).start();
+    }
+
+    public void execute() {
+        /*加锁，带过期时间*/
+        if (redisTemplate.opsForValue().setIfAbsent(LOCK_KEY, LOCK_VALUE, TTL_TIMEOUT, TTL_UNIT)) {
+            log.info("success-get-lock");
             business();
+            /*释放锁*/
+            redisTemplate.delete(LOCK_KEY);
+            log.info("delete-lock");
         } else {
-            System.out.println("get lock failure");
+            log.info("fail-get-lock");
         }
-        jedis.del(LOCK_NAME);
     }
 
-    /**
-     * 方式二： 超时机制保证锁一定能够释放
-     */
-    public static void secondLock() {
-        Jedis jedis = getJedis();
-        String result = jedis.set(LOCK_NAME, LOCK_VALUE, SetParams.setParams().nx().ex(keyTTLSeconds));
-        if ("OK".equalsIgnoreCase(result)) {
-            business();
-        } else {
-            System.out.println("get lock failure");
+    private void business() {
+        log.info("business");
+        try {
+            TimeUnit.SECONDS.sleep(200);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
         }
-        jedis.del(LOCK_NAME);
-    }
-
-    public static void business() {
-        System.out.println(Thread.currentThread().getName() + " executing business");
-    }
-
-    public static void main(String[] args) {
-        new Thread(() -> RedisBasicLock.firstLock()).start();
-        new Thread(() -> RedisBasicLock.firstLock()).start();
     }
 }
 ```
 
-### 2.2 增强版本
+#### 增强版
 
-- 上面分布式锁存在的问题： 误删，删已失效
+- 简易版存在的问题： 误删了别的线程加的锁
 
 ![image-20230329160706259](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20230329160706259.png)
 
 ```bash
-# 解决方法一：设置超时时间远大于业务执行时间，但是会带来性能问题
-
+# 解决方法一：设置超时时间远大于业务执行时间，但万一删除锁失败后，该锁一直就得不到释放
 # 解决方法二：删除锁的时候要判断，是不是自己的，如果是再删除    UUID
-
-1. 其中key可以用业务名称来表示
-2. value 用uuid加线程标识
-   2.1 删除锁时，先通过value来判断锁是不是自己线程的
-   2.2 如果是，则删除，如果不是，就不要删除
+- key可以用业务名称来表示
+- value 用uuid加线程标识，确保每个JVM中的每个进程的value都不同
 ```
 
 ```java
-package com.erick.lock;
+package com.citi.replay;
 
-import redis.clients.jedis.Jedis;
-import redis.clients.jedis.params.SetParams;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.stereotype.Service;
 
 import java.util.UUID;
+import java.util.concurrent.TimeUnit;
 
-import static com.erick.redis.JedisConnectionFactory.getJedis;
+@Slf4j
+@Service
+public class LockService {
 
-public class RedisSecondLock {
-    private static final String LOCK_NAME = "nike:order:2022-09-01";
+    private final String LOCK_KEY = "citi:order:2025-02-13";
+    private final long TTL_TIMEOUT = 60;
+    private final TimeUnit TTL_UNIT = TimeUnit.SECONDS;
 
-    private static long keyTTLSeconds = 5;
+    @Autowired
+    private RedisTemplate<String, String> redisTemplate;
 
-    private static String getLockValue() {
-        return Thread.currentThread().getId() + UUID.randomUUID().toString();
+    public void executeWithThread() {
+        new Thread(this::execute).start();
+        new Thread(this::execute).start();
     }
 
-    private static void executeBusiness() {
-        System.out.println("Business execution.....");
-    }
-
-    private static void firstMethod(String lockKey, String lockValue) {
-        Jedis redis = getJedis();
-        String result = redis.set(lockKey, lockValue, SetParams.setParams().nx().ex(keyTTLSeconds));
-
-        if ("OK".equalsIgnoreCase(result)) {
-            executeBusiness();
-            String presentValue = redis.get(lockKey);
-            /*判断是否是自己的，是自己的再删除*/
-            if (lockValue.equalsIgnoreCase(presentValue)) {
-                redis.del(lockKey);
-                System.out.println("lock deleted");
-            }
+    public void execute() {
+        String LOCK_VALUE = UUID.randomUUID().toString() + Thread.currentThread().getId();
+        if (redisTemplate.opsForValue().setIfAbsent(LOCK_KEY, LOCK_VALUE, TTL_TIMEOUT, TTL_UNIT)) {
+            log.info("success-get-lock");
+            business();
+            deleteLock(LOCK_VALUE);
         } else {
-            System.out.println("Can not get lock");
+            log.info("fail-get-lock");
         }
     }
 
-    public static void main(String[] args) {
-        new Thread(() -> firstMethod(LOCK_NAME, getLockValue())).start();
+    private void business() {
+        log.info("business");
+        try {
+            TimeUnit.SECONDS.sleep(10);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    /*不是原子性的操作*/
+    public void deleteLock(String originalValue) {
+        if (originalValue.equals(redisTemplate.opsForValue().get(LOCK_KEY))) {
+            log.info("delete-lock");
+            redisTemplate.delete(LOCK_KEY);
+        }
     }
 }
 ```
 
-### 2.3 LUA脚本
+#### LUA版本
 
-- 上面方案存在的问题：依然可能存在原子性问题
+- 增强版存在的问题：代码的原子性导致的误删
 - 判断锁是否能释放，和锁真正释放的代码中间，假如存在full gc，那么就会依然出现问题
-- 判断锁是否该释放和释放锁，应该做成一个原子性动作， 但是redis的事务机制不是强一致性
+- 判断锁是否该释放和释放锁，应该是一个原子操作， 但Redis的事务机制不是强一致性
+- Redis提供了Lua脚本功能，在一个脚本中编写多条Redis命令，确保多条命令的原子性
 
 ![image-20230329161221837](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20230329161221837.png)
 
-- Redis提供了Lua脚本功能，在一个脚本中编写多条Redis命令，确保多条命令的原子性
-
-```bash
-# 1. Redis内部函数
-redis.call('命令名称','key','其他参数', ......)
-
-# 2. 执行脚本 EVAL "redis.call()"
-# 无参数， 0代表脚本的key的参数个数
-EVAL "return redis.call('set','name','erick')" 0
-
-# 3. 带参数
-EVAL "return redis.call('set',KEYS[1],ARGV[1])" 1 age 20
-KEYS[1]:  redis的key值个数
-ARGV[1]:  redis的value的值个数
-1:        具体包含几个key
-age：     实际传递的key值
-20:       实际传递的value值
-```
-
-- 获取流程
-
 ```lua
--- 获取锁中的线程标识，动态传递参数
-local lockValue = redis.call('get',KEYS[1])
-
--- 比较线程标示与锁中的是否一致
-if (ARGV[1] == lockValue) then
+if (ARGV[1] ==  redis.call('get',KEYS[1])) then
    -- 释放锁
     redis.call('del',KEYS[1])
     return 1
@@ -196,76 +183,96 @@ end
 ```
 
 ```java
-package com.erick.lock;
+package com.citi.replay;
 
-import redis.clients.jedis.Jedis;
-import redis.clients.jedis.params.SetParams;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.script.DefaultRedisScript;
+import org.springframework.data.redis.core.script.RedisScript;
+import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.UUID;
+import java.util.concurrent.TimeUnit;
 
-import static com.erick.redis.JedisConnectionFactory.getJedis;
+@Slf4j
+@Service
+public class LockService {
 
-public class RedisLuaLock {
-    private static final String LOCK_NAME = "nike:order:2022-09-01";
+    private final String LOCK_KEY = "citi:order:2025-02-13";
+    private final long TTL_TIMEOUT = 60;
+    private final TimeUnit TTL_UNIT = TimeUnit.SECONDS;
 
-    private static long keyTTLSeconds = 5;
+    @Autowired
+    private RedisTemplate<String, String> redisTemplate;
 
-    private static String getLockValue() {
-        return Thread.currentThread().getId() + UUID.randomUUID().toString();
+    public void executeWithThread() {
+        new Thread(this::execute).start();
+        new Thread(this::execute).start();
     }
 
-    private static void executeBusiness() {
-        System.out.println("Business execution.....");
-    }
-
-    private static void firstMethod(String lockKey, String lockValue) {
-        Jedis redis = getJedis();
-        String result = redis.set(lockKey, lockValue, SetParams.setParams().nx().ex(keyTTLSeconds));
-
-        if ("OK".equalsIgnoreCase(result)) {
-            System.out.println("获取锁成功");
-            executeBusiness();
-            if (deleteLockWithLua(lockKey, lockValue)) {
-                System.out.println("释放锁成功");
-            }
+    public void execute() {
+        String LOCK_VALUE = UUID.randomUUID().toString() + Thread.currentThread().getId();
+        if (redisTemplate.opsForValue().setIfAbsent(LOCK_KEY, LOCK_VALUE, TTL_TIMEOUT, TTL_UNIT)) {
+            log.info("success-get-lock");
+            business();
+            deleteLock(LOCK_KEY, LOCK_VALUE);
+        } else {
+            log.info("fail-get-lock");
         }
     }
 
-    private static boolean deleteLockWithLua(String lockKey, String lockValue) {
-        String luaScript = """
-                local keyName = redis.call('get',KEYS[1])
-                if (ARGV[1] == keyName) then
+    private void business() {
+        log.info("business");
+        try {
+            TimeUnit.SECONDS.sleep(10);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    public void deleteLock(String key, String originalValue) {
+        String deleteLuaScript = """
+                if (ARGV[1] ==  redis.call('get',KEYS[1])) then
+                   -- 释放锁
                     redis.call('del',KEYS[1])
                     return 1
                 else
                     return 0
-                end       
+                end
                 """;
-        Jedis jedis = getJedis();
-        /*加载脚本*/
-        String script = jedis.scriptLoad(luaScript);
-        /*执行脚本*/
-        Object result = jedis.evalsha(script, Collections.singletonList(lockKey), Collections.singletonList(lockValue));
-        return result.equals(1L);
-    }
-
-    public static void main(String[] args) {
-        new Thread(() -> firstMethod(LOCK_NAME, getLockValue())).start();
+        RedisScript<Long> redisScript = new DefaultRedisScript<>(deleteLuaScript, Long.class);
+        Long result = redisTemplate.execute(redisScript, Collections.singletonList(key), originalValue);
+        log.info("delete-lock result:{}", result);
     }
 }
 ```
 
-### 2.4 存在的问题
+#### 遗留问题
 
 - 某些业务场景，需要对锁有更高的要求
 - 极端情况下出现的问题
 
-![image-20230329161517201](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20230329161517201.png)
+```bash
+# 不可重入
+- 同一个线程无法多次获取同一把锁
 
-## 3.Redisson
+# 不可重试
+- 获取锁只尝试一次就返回false，没有重试机制
 
-- 一个用来进行分布式锁的工具jar
+# 超时释放
+- 锁超时释放可以避免死锁
+- 但如果业务执行耗时的确很长，锁超时释放会存在安全隐患
+
+# 主从一致性
+- Redis在主从情况下，如果主从数据同步延迟，主机宕机，从机还没收到数据，则加锁失败
+```
+
+### Redisson
+
+- [Github](https://github.com/redisson/redisson)
+- 提供了分布式锁的解决方案
 
 ```java
 package com.erick.redisson;
@@ -355,7 +362,7 @@ public class RedissonDemo {
 }
 ```
 
-### 3.1 可重入
+#### 可重入
 
 - Redission的锁具有可重入性
 
@@ -376,17 +383,17 @@ public class RedissonDemo {
 
 ![image-20230329163157062](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20230329163157062.png)
 
-### 3.2 重试机制
+#### 重试机制
 
 - 通过等待时间结合，发布以及订阅模式来实现
 - 不会立即触发重试机制，而是订阅当前锁的使用者发布的消息
 
-### 3.3 锁超时释放
+#### 超时释放
 
 - 业务执行期间，不断有定时任务去更新过期时间
 - 业务执行完毕后，取消定时任务
 
-### 3.4 主从一致->联锁
+#### 主从一致->联锁
 
 - 主从一致性问题：由于主节点宕机，但是主节点的数据还未向从节点传输，引发的锁失效问题
 
