--- a/分布式.md
+++ b/分布式.md
@@ -32,9 +32,7 @@
 # 安全性：                   redis锁超时可以自动释放
 ```
 
-### 锁推演
-
-#### 简易版
+### 简易版
 
 ```bash
 1. 获取锁，并添加过期时间(保证锁一定释放)    SET K V EX 10 NX
@@ -93,7 +91,7 @@ public class LockService {
 }
 ```
 
-#### 增强版
+### 增强版
 
 - 简易版存在的问题： 误删了别的线程加的锁
 
@@ -163,7 +161,7 @@ public class LockService {
 }
 ```
 
-#### LUA版本
+### LUA版本
 
 - 增强版存在的问题：代码的原子性导致的误删
 - 判断锁是否能释放，和锁真正释放的代码中间，假如存在full gc，那么就会依然出现问题
@@ -249,7 +247,7 @@ public class LockService {
 }
 ```
 
-#### 遗留问题
+### 遗留问题
 
 - 某些业务场景，需要对锁有更高的要求
 - 极端情况下出现的问题
@@ -269,10 +267,10 @@ public class LockService {
 - Redis在主从情况下，如果主从数据同步延迟，主机宕机，从机还没收到数据，则加锁失败
 ```
 
-### Redisson
+## Redisson分布式锁
 
 - [Github](https://github.com/redisson/redisson)
-- 提供了分布式锁的解决方案
+- 基于Redis，封装了分布式锁的解决方案
 
 ```java
 package com.erick.redisson;
@@ -362,7 +360,7 @@ public class RedissonDemo {
 }
 ```
 
-#### 可重入
+### 可重入
 
 - Redission的锁具有可重入性
 
@@ -383,17 +381,17 @@ public class RedissonDemo {
 
 ![image-20230329163157062](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20230329163157062.png)
 
-#### 重试机制
+### 重试机制
 
 - 通过等待时间结合，发布以及订阅模式来实现
 - 不会立即触发重试机制，而是订阅当前锁的使用者发布的消息
 
-#### 超时释放
+### 超时释放
 
 - 业务执行期间，不断有定时任务去更新过期时间
 - 业务执行完毕后，取消定时任务
 
-#### 主从一致->联锁
+### 主从一致->联锁
 
 - 主从一致性问题：由于主节点宕机，但是主节点的数据还未向从节点传输，引发的锁失效问题
 
