--- a/分布式.md
+++ b/分布式.md
@@ -388,7 +388,7 @@ public class RedissonDemo {
 
 ### 超时释放
 
-- 业务执行期间，不断有定时任务去更新过期时间
+- 业务执行期间，不断有定时任务去更新当前锁的过期时间
 - 业务执行完毕后，取消定时任务
 
 ### 主从一致->联锁
@@ -470,7 +470,6 @@ public class Test04 {
         return Redisson.create(config);
     }
 }
-
 ```
 
-# 
+# 分布式事务
