--- a/devOps/云原生.md
+++ b/devOps/云原生.md
@@ -26,6 +26,160 @@
 - 速度比公网IP更加块
 ```
 
+# 后端建站
+
+## 1. 服务器购买
+
+- 服务器购买开通后，部署上对应的后端的服务，开启对应的端口，测试访问
+
+```bash
+# 访问方式： http + ip + 端口 + 路径
+http://ip:port/api/test
+```
+
+## 2. 域名购买
+
+- 进入控制台，购买域名，按照指示操作，和对应的服务器进行绑定
+- 需要填写信息模版，同时要在信息模版中进行邮箱验证
+- 申请好之后，绑定到指定的服务器ip
+- 临时访问窗口期 ：阿里云可能在新域名解析生效后短暂放行（约10~30分钟），随后触发备案检测并阻断访问
+
+## 3. ICP备案
+
+```bash
+# 可以访问
+http://ip:port/api/test
+
+# 域名： 就会出现下面的警告
+http://域名:port/api/test
+
+# 避免通过该域名，传播非法内容
+```
+
+![image-20250305194918905](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20250305194918905.png)
+
+## 4. SSL证书
+
+- 产品名称：数字证书管理服务
+- 证书管理--->SSL证书管理--->个人测试证书Pro（原免费证书)
+- 申请后就可以通过https的方式访问后端
+
+```bash
+# 有效期一年
+- 1. 购买后绑定对应的域名
+- 2. 提交审核申请
+- 3. 下载对应的证书
+```
+
+### 下载
+
+- 在阿里云下载对应的Nginx的SSL证书
+
+```bash
+- .pem 文件：证书文件
+- .key 文件：私钥文件
+```
+
+### 上传
+
+```bash
+# 阿里云服务器
+
+# 创建目录, 将证书上传到该目录中
+mkdir -p /etc/nginx/ssl/
+
+put /Users/shuzhan/Desktop/daydreamerfly.cn.pem /etc/nginx/ssl
+put /Users/shuzhan/Desktop/daydreamerfly.cn.key /etc/nginx/ssl 
+
+# 保证权限
+chmod 600 /etc/nginx/ssl/*
+```
+
+### 站点文件
+
+```bash
+cd etc/nginx
+mkdir conf.d
+cd conf.d
+touch erick.conf
+```
+
+```bash
+# HTTPS 服务配置
+server {
+    listen 443 ssl;
+    server_name example.com;  # 你的域名
+
+    # SSL 证书路径
+    ssl_certificate /etc/nginx/ssl/example.com.pem;
+    ssl_certificate_key /etc/nginx/ssl/example.com.key;
+
+    # SSL 优化配置（可选）
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+    ssl_prefer_server_ciphers on;
+
+    # 代理到后端 8080 端口的 /api 接口
+    location /api/ {  # 匹配所有以 /api/ 开头的请求
+        proxy_pass http://localhost:8080/;  # 末尾的 / 确保路径拼接正确
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 可选：WebSocket 支持
+        # proxy_http_version 1.1;
+        # proxy_set_header Upgrade $http_upgrade;
+        # proxy_set_header Connection "upgrade";
+    }
+
+    # 其他路径的配置（如静态文件）
+    # location /static/ {
+    #     alias /var/www/static/;
+    # }
+}
+
+# 强制 HTTP 跳转 HTTPS
+server {
+    listen 80;
+    server_name example.com;
+    return 301 https://$host$request_uri;
+}
+```
+
+```bash
+server {
+    listen 443 ssl;
+    server_name daydreamerfly.cn;  
+    ssl_certificate /etc/nginx/ssl/daydreamerfly.cn.pem;
+    ssl_certificate_key /etc/nginx/ssl/daydreamerfly.cn.key;
+    location /api/ {  
+        proxy_pass http://localhost:8080/;  
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+server {
+    listen 80;
+    server_name daydreamerfly.cn;
+    return 301 https://$host$request_uri;
+}
+```
+
+### 测试
+
+```bash
+# 重启服务
+systemctl restart nginx
+
+curl https://daydreamerfly.cn/api/test/test
+```
+
 # VPC
 
 - Virtual Private Cloud，专有网络，私有网络，针对云服务器的私有IP而言
