--- a/java/加密算法.md
+++ b/java/加密算法.md
@@ -250,13 +250,9 @@ public class DecryptTest {
 
 ## 简介
 
+
+
 ```bash
-# publickey
-- 加密数据
-
-# privatekey
-- 解密数据
-
 # 二者为一对，进行加密和解密
 - 保密性好，消除了用户交换密钥的需要
 - 加解密速度，远远慢于对称加密，因此一般只对少量数据加密
@@ -269,7 +265,7 @@ public class DecryptTest {
 
 ![image-20241120234105764](https://erick-typora-image.oss-cn-shanghai.aliyuncs.com/img/image-20241120234105764.png)
 
-## RSA算法
+# RSA
 
 ### 位数
 
@@ -287,54 +283,210 @@ public class DecryptTest {
 - 提供了更高的安全性，但计算和存储成本较高
 ```
 
-### bouncycastle三方包
+## 公私/钥
 
-#### create
+### 公钥
+
+- 公钥可以自由分发，无需加密
+
+```bash
+# 加密数据
+- 任何持有公钥的人都可以用它对敏感信息（如密码、对称加密的密钥）进行加密，但无法解密
+
+# 验证签名
+- 验证数据是否由对应的私钥持有者签名，确保数据来源可信且未被篡改。
+```
+
+### 私钥
+
+- 私钥必须严格保密，不可泄露
+- 私钥的信息中，包含公钥的信息，可以从私钥中提取出公钥信息
+
+```bash
+# 解密数据
+- 解密由对应公钥加密的信息，确保只有私钥持有者能读取内容
+
+# 生成签名
+- 对数据生成数字签名，证明数据的完整性和来源身份。
+```
+
+### 关系
+
+```bash
+# 私钥
+- 包含模数 n 、公开指数 e 、私有指数 d 和其他参数（如 p , q）
+
+# 公钥
+- 仅包含模数 n 和公开指数 e
+```
+
+### pem格式
+
+- 一般公私钥用.pem文件来保存
+- 将上面的字符串转换为pem文件，基于 Base64 编码的文本文件，可读性强，比较推荐
+
+## Java-API
+
+### 生成
+
+- 用Java原生的API创建对应的.pem文件
+- 将生成的公私钥匙分别拷贝下来，保存在.pem文件中
 
 ```java
-package com.erick;
+package com.princess.kitchen.utils;
 
-import org.bouncycastle.asn1.pkcs.PrivateKeyInfo;
-import org.bouncycastle.jce.provider.BouncyCastleProvider;
-import org.bouncycastle.jce.provider.PEMUtil;
-import org.bouncycastle.openssl.jcajce.JcaPEMKeyConverter;
-import org.junit.jupiter.api.Test;
-
-import javax.crypto.KeyGenerator;
-import java.security.*;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.NoSuchAlgorithmException;
+import java.security.interfaces.RSAPrivateKey;
+import java.security.interfaces.RSAPublicKey;
 import java.util.Base64;
 
-public class CreateRSATest {
+public class RSACreateUtil {
 
-
-    /*加密算法*/
-    private final String KEY_ALGORITHM = "RSA";
-
-    /*RSA提供者*/
-    private final String provider = "BC";
-
-    /*密钥长度*/
-    private final int keySize = 2048;
-
-    @Test
-    public void create() throws Exception {
-        /*添加bouncy castle作为安全提供者*/
-        Security.addProvider(new BouncyCastleProvider());
+    public static KeyPair generateKeyPair() throws NoSuchAlgorithmException {
         /*生成*/
-        KeyPairGenerator generator = KeyPairGenerator.getInstance(KEY_ALGORITHM, provider);
-        generator.initialize(keySize);
+        KeyPairGenerator generator = KeyPairGenerator.getInstance("RSA");  /*加密算法*/
+        generator.initialize(3072);    /*密钥长度: 默认2048,prod建议3072或4096*/
+        return generator.generateKeyPair();
+    }
 
-        KeyPair keyPair = generator.generateKeyPair();
-        PublicKey publicKey = keyPair.getPublic();
-        PrivateKey privateKey = keyPair.getPrivate();
+    // 将私钥转换为 PKCS#8 PEM 格式
+    public static String privateKeyToPem(RSAPrivateKey privateKey) {
+        byte[] encoded = privateKey.getEncoded();   // PKCS#8编码
+        String base64 = Base64.getMimeEncoder(64, "\n".getBytes()).encodeToString(encoded);
+        return "-----BEGIN PRIVATE KEY-----\n" + base64 + "\n-----END PRIVATE KEY-----";
+    }
 
-        /*使用Base64进行存储*/
-        String publicKeyString = Base64.getEncoder().encodeToString(publicKey.getEncoded());
-        String privateKeyString = Base64.getEncoder().encodeToString(privateKey.getEncoded());
-        System.out.println(publicKeyString);
-        System.out.println("------------");
-        System.out.println(privateKeyString);
+    // 将公钥转换为 X.509 PEM 格式
+    public static String publicKeyToPem(RSAPublicKey publicKey) {
+        byte[] encoded = publicKey.getEncoded(); // X.509 编码
+        String base64 = Base64.getMimeEncoder(64, "\n".getBytes()).encodeToString(encoded);
+        return "-----BEGIN PUBLIC KEY-----\n" + base64 + "\n-----END PUBLIC KEY-----";
     }
 }
 ```
 
+```bash
+# openssl是一个单独的工具，可以用来进行对公私钥的查看
+# 检查私钥/公钥
+openssl rsa -in private.pem -noout -check
+openssl rsa -pubin -in public.pem -text -noout
+
+# 检查是否配对： 如果两个 MD5 值相同，说明密钥对匹配
+openssl rsa -in private.pem -noout -modulus | openssl md5              # 生成私钥的摘要
+openssl rsa -pubin -in public.pem -noout -modulus | openssl md5        # 生成公钥的摘要
+```
+
+### 加密/解密
+
+- 公钥加密数据
+- 私钥解密数据
+
+```xml
+<dependency>
+    <groupId>org.bouncycastle</groupId>
+    <artifactId>bcprov-jdk18on</artifactId>
+    <version>1.80</version>
+</dependency>
+```
+
+```java
+package com.princess.kitchen.utils;
+
+import org.bouncycastle.util.io.pem.PemReader;
+
+import javax.crypto.Cipher;
+import java.io.FileReader;
+import java.security.KeyFactory;
+import java.security.PrivateKey;
+import java.security.PublicKey;
+import java.security.spec.PKCS8EncodedKeySpec;
+import java.security.spec.X509EncodedKeySpec;
+
+public class RSAEncryptDecryptUtil {
+    /**
+     * 从 PEM 文件加载公钥, 构建PublicKey对象
+     */
+    public static PublicKey loadPublicKey(String filename) throws Exception {
+        try (PemReader pemReader = new PemReader(new FileReader(filename))) {
+            byte[] keyBytes = pemReader.readPemObject().getContent();
+            X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
+            return KeyFactory.getInstance("RSA").generatePublic(keySpec);
+        }
+    }
+
+    /**
+     * 使用 RSA 公钥加密数据
+     */
+    public static byte[] encrypt(PublicKey publicKey, byte[] data) throws Exception {
+        Cipher cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
+        cipher.init(Cipher.ENCRYPT_MODE, publicKey);
+        return cipher.doFinal(data);
+    }
+
+    /**
+     * 从 PEM 文件加载私钥，构建PrivateKey对象
+     */
+    public static PrivateKey loadPrivateKey(String filename) throws Exception {
+        try (PemReader pemReader = new PemReader(new FileReader(filename))) {
+            byte[] keyBytes = pemReader.readPemObject().getContent();
+            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
+            return KeyFactory.getInstance("RSA").generatePrivate(keySpec);
+        }
+    }
+
+    /**
+     * 使用 RSA 私钥解密数据
+     */
+    public static byte[] decrypt(PrivateKey privateKey, byte[] encryptedData) throws Exception {
+        Cipher cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
+        cipher.init(Cipher.DECRYPT_MODE, privateKey);
+        return cipher.doFinal(encryptedData);
+    }
+}
+```
+
+```java
+package com.erick;
+
+import com.princess.kitchen.utils.RSAEncryptDecryptUtil;
+import lombok.extern.slf4j.Slf4j;
+import org.junit.jupiter.api.Test;
+
+import java.security.PrivateKey;
+import java.security.PublicKey;
+import java.util.Base64;
+
+@Slf4j
+public class RSAEncryptDecryptTest {
+    /*原生数据*/
+    String originalData = "hello world";
+
+    /*加密后的数据*/
+    String encryptData = "";
+
+    /*解密后的数据*/
+    String decryptData = "";
+
+    @Test
+    public void test() throws Exception {
+        // 1. 加密
+        PublicKey publicKey = RSAEncryptDecryptUtil.loadPublicKey("/Users/shuzhan/Documents/princess-kitchen/api-service/src/main/resources/public.pem");
+        byte[] encryptByte = RSAEncryptDecryptUtil.encrypt(publicKey, originalData.getBytes());
+        /*加密后的base 64*/
+        encryptData = Base64.getEncoder().encodeToString(encryptByte);
+        log.info("加密后的string{}", encryptData);
+
+        // 2. 解密
+        PrivateKey privateKey = RSAEncryptDecryptUtil.loadPrivateKey("/Users/shuzhan/Documents/princess-kitchen/api-service/src/main/resources/private.pem");
+        byte[] decryptByte = RSAEncryptDecryptUtil.decrypt(privateKey, Base64.getDecoder().decode(encryptData));
+        decryptData = new String(decryptByte);
+        log.info("解密后的string{}", decryptData);
+    }
+}
+```
+
+
+
+# 
